<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/background_orange"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_name"
                android:textColor="@color/white"
                android:id="@+id/text_view_city_main"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_desc"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/weather_sunny_white"
                android:contentDescription="@string/sun_image_desc" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_temp"
                android:textColor="@color/white"
                android:gravity="right"
                android:textSize="50sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/message"
        android:text="@string/placeholder"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        app:srcCompat="@drawable/ic_favorite"
        android:id="@+id/bookmarks_btn"
        android:onClick="handleBookmarks"
        app:tint="@color/white"
        app:shapeAppearance="@style/Floating"
        app:maxImageSize="50dp"
        app:backgroundTint="@color/background_orange"
        android:contentDescription="@string/todo"
        tools:ignore="UsingOnClickInXml" />

</RelativeLayout>